DI-001 [CHORE] Set up the app structure, dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+.DS_Store
+
+Packages/.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+
+App/DIShowcase.xcodeproj/project.xcworkspace/contents.xcworkspacedata
